# server

./: Cargo.toml  Rocket.toml
frontend/admin/: index.html  index.html.tera  index.js  style.css
frontend/display/: estimate.html.tera  index.html.tera  index.js  normal.html.tera  score.html.tera  score.js  sort.html.tera  style.css  waiting.html.tera
frontend/ui/: estimate.html.tera  estimate.js  index.html.tera  index.js  login.html.tera  login.js  normal.html.tera  normal.js  sort.html.tera  sort.js  style.css  waiting.html.tera  waiting.js
res/: fragen.txt
src/: client.rs  display.rs  group.rs  main.rs  questions.rs  server_data.rs
