[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = "0.8.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
chashmap = "2.2.2"
serde_json = "1.0.81"
log = "0.4"
simplelog = "0.12.1"
tera = "1.16.0"
lazy_static = "1.4"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
crossbeam = "0.8.1"