[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = "0.9.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1"
serde_json = "1.0"
log = "0.4"
simplelog = "0.12.1"
tera = "1.16.0"
thiserror = "1.0.40"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
crossbeam = "0.8"
